sarafi work overlap, lazy load video, fixed nav

--- a/css/style.scss
+++ b/css/style.scss
@@ -405,6 +405,7 @@ a.button-slanted.stroke-btn {
 
 .navbar.shadow {
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.07), 0px 3px 15px rgba(0, 0, 0, 0.05);
+  top: 0;
   transition: all ease 150ms;
 }
 
@@ -1076,8 +1077,11 @@ form {
   }
 
   .thumb-video {
-      // height: 368px;
       aspect-ratio: 201/155;
+      color: transparent;
+      background: linear-gradient(100deg, #eceff1 30%, #f6f7f8 50%, #eceff1 70%);
+      background-size: 400%;
+      animation: loading 1.2s ease-in-out infinite;
   }
 
 
@@ -1093,6 +1097,21 @@ form {
     .thumb-details, .vid-icon {
       opacity: 0;
     }
+  }
+}
+
+@keyframes loading {
+  0% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0 50%;
+  }
+}
+
+@media (min-width: 1020px) {
+  .thumb-video {
+      min-height: 368px;
   }
 }
 
